WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260823
http/tests/workers/service/self_registration.html is a flaky text failure.
https://bugs.webkit.org/show_bug.cgi?id=260823
Summary
http/tests/workers/service/self_registration.html is a flaky text failure.
Ben Schwartz
Reported
2023-08-28 15:14:50 PDT
http/tests/workers/service/self_registration.html This test is an extremely flaky failure on all platforms. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fworkers%2Fservice%2Fself_registration.html&recent=false&platform=ios&platform=mac&flavor=wk2
TEXT DIFF: - scriptURL:
http://127.0.0.1:8000/workers/service/resources/self_registration-worker.js
- state: activating -Received statechange event on service worker * self.registration scope:
http://127.0.0.1:8000/workers/service/resources/
updateViaCache: imports @@ -31,6 +30,6 @@ waiting worker: null active worker: - scriptURL:
http://127.0.0.1:8000/workers/service/resources/self_registration-worker.js
-- state: activated +- state: activating DIFF URL:
https://build.webkit.org/results/Apple-iOS-16-Simulator-Release-WK2-Tests/266898@main%20(3866)/http/tests/workers/service/self_registration-pretty-diff.html
REPRODUCIBILITY: I was unable to reproduce this issue during testing. REGRESSION: I was unable to locate a regression point.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-28 15:15:03 PDT
<
rdar://problem/114590106
>
EWS
Comment 2
2023-08-28 15:40:30 PDT
Test gardening commit
267369@main
(256b5f3411b5): <
https://commits.webkit.org/267369@main
> Reviewed commits have been landed. Closing PR #17151 and removing active labels.
youenn fablet
Comment 3
2023-10-09 01:46:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18829
EWS
Comment 4
2023-10-11 00:15:23 PDT
Committed
269191@main
(f6a1bd73126d): <
https://commits.webkit.org/269191@main
> Reviewed commits have been landed. Closing PR #18829 and removing active labels.
WebKit Commit Bot
Comment 5
2023-10-13 11:24:32 PDT
Re-opened since this is blocked by
bug 263128
youenn fablet
Comment 6
2023-10-17 05:49:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19163
EWS
Comment 7
2023-10-18 03:22:48 PDT
Committed
269460@main
(6b4ebcdffbfc): <
https://commits.webkit.org/269460@main
> Reviewed commits have been landed. Closing PR #19163 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug